--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,14 @@
 			<version>1.0.6</version>
 		</dependency>
 
+		<dependency>
+	        <groupId>org.springframework.data</groupId>
+	        <artifactId>spring-data-redis</artifactId>
+	        <version>1.1.1.RELEASE</version>
+	    </dependency>
+
+
+
 	</dependencies>
 
 	<build>
