--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,13 @@
 	        <artifactId>spring-data-redis</artifactId>
 	        <version>1.1.1.RELEASE</version>
 	    </dependency>
-
+	    
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		            
 
 
 	</dependencies>
