--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.springframework.version>3.0.5.RELEASE</org.springframework.version><!-- 
-			3.2.2.RELEASE -->
+		<org.springframework.version>3.1.1.RELEASE</org.springframework.version><!-- 
+			3.2.2.RELEASE  3.0.5.RELEASE-->
 		<log4jVersion>1.2.17</log4jVersion>
 		<slf4jVersion>1.6.6</slf4jVersion>
 	</properties>
@@ -221,7 +221,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>            
-
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		            
 
 	</dependencies>
 
