--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
-			<version>[2.3.18,2.4)</version>
+			<version>2.3.20</version>
 		</dependency>
 
 		<dependency>
